@@ -1,3 +1,8 @@
+2012-03-28  Kaz Kylheku  <kaz@kylheku.com>
+
+	* lib.c (obj_print, obj_pprint): Do not use the #<lazy-string ..>
+	notation for lazy strings that have been forced.
+
 2012-03-27  Kaz Kylheku  <kaz@kylheku.com>
 
 	* stream.c (vformat): Compensate for differences in printf
